Refactor code for iOS compatibility: replace Java time with System.currentTimeMillis, update coroutine dispatchers, and improve null handling in collections